templates/keycloak-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: kdh-0427
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - host: www.keycloak.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kdh-0427-keycloak
                port:
                  number: 80
